error.txt
resize.c:18:42: error: ordered comparison between pointer and integer ('char *' and 'int') [-Werror]
    if (argc != 3 | (argv[1]<0 && argv[1]>100))
                                  ~~~~~~~^~~~
resize.c:18:19: error: | has lower precedence than !=; != will be evaluated first [-Werror,-Wparentheses]
    if (argc != 3 | (argv[1]<0 && argv[1]>100))
        ~~~~~~~~~~^
resize.c:18:19: note: place parentheses around the '!=' expression to silence this warning
    if (argc != 3 | (argv[1]<0 && argv[1]>100))
                  ^
        (        )
resize.c:18:19: note: place parentheses around the | expression to evaluate it first
    if (argc != 3 | (argv[1]<0 && argv[1]>100))
                  ^
                (                             )
resize.c:25:9: error: incompatible pointer to integer conversion initializing 'int' with an expression of type 'char *' [-Werror,-Wint-conversion]
    int n=argv[1];
        ^ ~~~~~~~
3 errors generated.
make: *** [resize] Error 1
